--- a/k8s/apps/observability/gatus/app/externalsecret.yaml
+++ b/k8s/apps/observability/gatus/app/externalsecret.yaml
@@ -12,7 +12,7 @@ spec:
     template:
       engineVersion: v2
       data:
-        SECRET_HOME_DOMAIN: ${SECRET_HOME_DOMAIN}
+        SECRET_HOME_DOMAIN: goyangi.cloud
         PUSHOVER_TOKEN: "{{ .GATUS_PUSHOVER_TOKEN }}"
         PUSHOVER_USER_KEY: "{{ .PUSHOVER_USER_KEY }}"
         INIT_POSTGRES_DBNAME: gatus
