--- a/k8s/apps/database/pgadmin/app/helmrelease.yaml
+++ b/k8s/apps/database/pgadmin/app/helmrelease.yaml
@@ -73,9 +73,9 @@ spec:
         enabled: true
         className: internal
         annotations:
-          external-dns.alpha.kubernetes.io/target: internal.${SECRET_HOME_DOMAIN}
+          external-dns.alpha.kubernetes.io/target: internal.goyangi.cloud
         hosts:
-          - host: "{{ .Release.Name }}.${SECRET_HOME_DOMAIN}"
+          - host: "{{ .Release.Name }}.goyangi.cloud"
             paths:
               - path: /
                 service:
