--- a/k8s/apps/default/deemix/app/helmrelease.yaml
+++ b/k8s/apps/default/deemix/app/helmrelease.yaml
@@ -81,10 +81,10 @@ spec:
     ingress:
       app:
         annotations:
-          external-dns.alpha.kubernetes.io/target: internal.${SECRET_HOME_DOMAIN}
+          external-dns.alpha.kubernetes.io/target: internal.goyangi.cloud
         className: internal
         hosts:
-          - host: "{{ .Release.Name }}.${SECRET_HOME_DOMAIN}"
+          - host: "{{ .Release.Name }}.goyangi.cloud"
             paths:
               - path: /
                 service:
