--- a/k8s/apps/default/go2rtc/app/helmrelease.yaml
+++ b/k8s/apps/default/go2rtc/app/helmrelease.yaml
@@ -66,7 +66,7 @@ spec:
         controller: go2rtc
         type: LoadBalancer
         annotations:
-          external-dns.alpha.kubernetes.io/hostname: go2rtc-streams.${SECRET_HOME_DOMAIN}
+          external-dns.alpha.kubernetes.io/hostname: go2rtc-streams.goyangi.cloud
           lbipam.cilium.io/ips: 192.168.68.124
         ports:
           http:
@@ -83,7 +83,7 @@ spec:
       app:
         className: internal
         hosts:
-          - host: go2rtc.${SECRET_HOME_DOMAIN}
+          - host: go2rtc.goyangi.cloud
             paths:
               - path: /
                 service:
