--- a/k8s/apps/default/home-assistant/app/helmrelease.yaml
+++ b/k8s/apps/default/home-assistant/app/helmrelease.yaml
@@ -81,10 +81,10 @@ spec:
     ingress:
       app:
         annotations:
-          external-dns.alpha.kubernetes.io/target: "internal.${SECRET_HOME_DOMAIN}"
+          external-dns.alpha.kubernetes.io/target: "internal.goyangi.cloud"
         className: internal
         hosts:
-          - host: "hass.${SECRET_HOME_DOMAIN}"
+          - host: "hass.goyangi.cloud"
             paths:
               - path: /
                 service:
@@ -92,10 +92,10 @@ spec:
                   port: http
       code-server:
         annotations:
-          external-dns.alpha.kubernetes.io/target: "internal.${SECRET_HOME_DOMAIN}"
+          external-dns.alpha.kubernetes.io/target: "internal.goyangi.cloud"
         className: internal
         hosts:
-          - host: "hass-code.${SECRET_HOME_DOMAIN}"
+          - host: "hass-code.goyangi.cloud"
             paths:
               - path: /
                 service:
