--- a/k8s/apps/default/jellyseerr/app/helmrelease.yaml
+++ b/k8s/apps/default/jellyseerr/app/helmrelease.yaml
@@ -81,9 +81,9 @@ spec:
       app:
         className: external
         annotations:
-          external-dns.alpha.kubernetes.io/target: external.${SECRET_HOME_DOMAIN}
+          external-dns.alpha.kubernetes.io/target: external.goyangi.cloud
         hosts:
-          - host: requests.${SECRET_HOME_DOMAIN}
+          - host: requests.goyangi.cloud
             paths:
               - path: /
                 service:
