--- a/k8s/apps/default/maintainerr/app/helmrelease.yaml
+++ b/k8s/apps/default/maintainerr/app/helmrelease.yaml
@@ -70,9 +70,9 @@ spec:
       app:
         className: internal
         annotations:
-          external-dns.alpha.kubernetes.io/target: internal.${SECRET_HOME_DOMAIN}
+          external-dns.alpha.kubernetes.io/target: internal.goyangi.cloud
         hosts:
-          - host: "{{ .Release.Name }}.${SECRET_HOME_DOMAIN}"
+          - host: "{{ .Release.Name }}.goyangi.cloud"
             paths:
               - path: /
                 service:
