--- a/k8s/apps/default/plex/app/helmrelease.yaml
+++ b/k8s/apps/default/plex/app/helmrelease.yaml
@@ -40,7 +40,7 @@ spec:
               tag: 1.41.1.9057-af5eaea7a@sha256:5926b77196bb7c9f75b52f431d0483abea0fef1f576b7201592b385449201456
             env:
               TZ: Australia/Sydney
-              PLEX_ADVERTISE_URL: https://plex.${SECRET_HOME_DOMAIN}:443,http://192.168.68.129:32400
+              PLEX_ADVERTISE_URL: https://plex.goyangi.cloud:443,http://192.168.68.129:32400
               PLEX_NO_AUTH_NETWORKS: 192.168.68.0/24
             probes:
               liveness: &probes
@@ -94,11 +94,11 @@ spec:
     ingress:
       app:
         annotations:
-          external-dns.alpha.kubernetes.io/target: external.${SECRET_HOME_DOMAIN}
+          external-dns.alpha.kubernetes.io/target: external.goyangi.cloud
           nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
         className: external
         hosts:
-          - host: "{{ .Release.Name }}.${SECRET_HOME_DOMAIN}"
+          - host: "{{ .Release.Name }}.goyangi.cloud"
             paths:
               - path: /
                 service:
