--- a/k8s/apps/default/qbittorrent/app/helmrelease.yaml
+++ b/k8s/apps/default/qbittorrent/app/helmrelease.yaml
@@ -109,10 +109,10 @@ spec:
     ingress:
       app:
         annotations:
-          external-dns.alpha.kubernetes.io/target: "internal.${SECRET_HOME_DOMAIN}"
+          external-dns.alpha.kubernetes.io/target: "internal.goyangi.cloud"
         className: internal
         hosts:
-          - host: "qb.${SECRET_HOME_DOMAIN}"
+          - host: "qb.goyangi.cloud"
             paths:
               - path: /
                 service:
