--- a/k8s/apps/default/wizarr/app/helmrelease.yaml
+++ b/k8s/apps/default/wizarr/app/helmrelease.yaml
@@ -60,9 +60,9 @@ spec:
       app:
         className: external
         annotations:
-          external-dns.alpha.kubernetes.io/target: external.${SECRET_HOME_DOMAIN}
+          external-dns.alpha.kubernetes.io/target: external.goyangi.cloud
         hosts:
-          - host: join.${SECRET_HOME_DOMAIN}
+          - host: join.goyangi.cloud
             paths:
               - path: /
                 service:
