--- a/k8s/apps/default/zwave/app/helmrelease.yaml
+++ b/k8s/apps/default/zwave/app/helmrelease.yaml
@@ -79,7 +79,7 @@ spec:
       app:
         className: internal
         hosts:
-          - host: "{{ .Release.Name }}.${SECRET_HOME_DOMAIN}"
+          - host: "{{ .Release.Name }}.goyangi.cloud"
             paths:
               - path: /
                 service:
