--- a/k8s/apps/network/cloudflared/app/externalsecret.yaml
+++ b/k8s/apps/network/cloudflared/app/externalsecret.yaml
@@ -16,7 +16,7 @@ spec:
           {
             "AccountTag": "{{ .CLOUDFLARE_ACCOUNT_TAG }}",
             "TunnelSecret": "{{ .CLOUDFLARE_TUNNEL_SECRET }}",
-            "TunnelID": "${SECRET_CLOUDFLARE_TUNNEL_ID}"
+            "TunnelID": "4822490d-d152-4724-b1eb-39b00e298cb9"
           }
   dataFrom:
     - extract:
