--- a/k8s/apps/network/nginx/certificates/externalsecret.yaml
+++ b/k8s/apps/network/nginx/certificates/externalsecret.yaml
@@ -2,17 +2,17 @@
 apiVersion: external-secrets.io/v1beta1
 kind: ExternalSecret
 metadata:
-  name: "${SECRET_HOME_DOMAIN//./-}-tls"
+  name: "goyangi-cloud-tls"
 spec:
   secretStoreRef:
     kind: ClusterSecretStore
     name: onepassword-connect
   target:
-    name: "${SECRET_HOME_DOMAIN//./-}-tls"
+    name: "goyangi-cloud-tls"
     template:
       engineVersion: v2
       type: kubernetes.io/tls
   dataFrom:
     - extract:
-        key: "${SECRET_HOME_DOMAIN//./-}-tls"
+        key: "goyangi-cloud-tls"
         decodingStrategy: Auto
