--- a/k8s/apps/network/nginx/external/helmrelease.yaml
+++ b/k8s/apps/network/nginx/external/helmrelease.yaml
@@ -27,7 +27,7 @@ spec:
     controller:
       service:
         annotations:
-          external-dns.alpha.kubernetes.io/hostname: &hostname "external.${SECRET_HOME_DOMAIN}"
+          external-dns.alpha.kubernetes.io/hostname: &hostname "external.goyangi.cloud"
           lbipam.cilium.io/ips: "192.168.68.203"
         externalTrafficPolicy: Cluster
       ingressClassResource:
