--- a/k8s/apps/observability/gatus/app/helmrelease.yaml
+++ b/k8s/apps/observability/gatus/app/helmrelease.yaml
@@ -110,10 +110,10 @@ spec:
     ingress:
       app:
         annotations:
-          external-dns.alpha.kubernetes.io/target: external.${SECRET_HOME_DOMAIN}
+          external-dns.alpha.kubernetes.io/target: external.goyangi.cloud
         className: external
         hosts:
-          - host: status.${SECRET_HOME_DOMAIN}
+          - host: status.goyangi.cloud
             paths:
               - path: /
                 service:
