--- a/k8s/apps/observability/grafana/app/helmrelease.yaml
+++ b/k8s/apps/observability/grafana/app/helmrelease.yaml
@@ -31,7 +31,7 @@ spec:
       GF_EXPLORE_ENABLED: true
       GF_PLUGINS_ALLOW_LOADING_UNSIGNED_PLUGINS: natel-discrete-panel,pr0ps-trackmap-panel,panodata-map-panel
       GF_SECURITY_ANGULAR_SUPPORT_ENABLED: true
-      GF_SERVER_ROOT_URL: "https://grafana.${SECRET_HOME_DOMAIN}"
+      GF_SERVER_ROOT_URL: "https://grafana.goyangi.cloud"
     grafana.ini:
       analytics:
         check_for_updates: false
@@ -225,9 +225,9 @@ spec:
     ingress:
       enabled: true
       annotations:
-        external-dns.alpha.kubernetes.io/target: "internal.${SECRET_HOME_DOMAIN}"
+        external-dns.alpha.kubernetes.io/target: "internal.goyangi.cloud"
       ingressClassName: internal
-      hosts: ["grafana.${SECRET_HOME_DOMAIN}"]
+      hosts: ["grafana.goyangi.cloud"]
     persistence:
       enabled: false
     testFramework:
