--- a/k8s/apps/observability/kube-prometheus-stack/app/helmrelease.yaml
+++ b/k8s/apps/observability/kube-prometheus-stack/app/helmrelease.yaml
@@ -37,9 +37,9 @@ spec:
       ingress:
         enabled: true
         annotations:
-          external-dns.alpha.kubernetes.io/target: "internal.${SECRET_HOME_DOMAIN}"
+          external-dns.alpha.kubernetes.io/target: "internal.goyangi.cloud"
         ingressClassName: internal
-        hosts: ["alertmanager.${SECRET_HOME_DOMAIN}"]
+        hosts: ["alertmanager.goyangi.cloud"]
         pathType: Prefix
       alertmanagerSpec:
         useExistingSecret: true
@@ -71,9 +71,9 @@ spec:
       ingress:
         enabled: true
         annotations:
-          external-dns.alpha.kubernetes.io/target: "internal.${SECRET_HOME_DOMAIN}"
+          external-dns.alpha.kubernetes.io/target: "internal.goyangi.cloud"
         ingressClassName: internal
-        hosts: ["prometheus.${SECRET_HOME_DOMAIN}"]
+        hosts: ["prometheus.goyangi.cloud"]
         pathType: Prefix
       prometheusSpec:
         scrapeInterval: 1m # Must match interval in Grafana Helm chart
