--- a/k8s/apps/rook-ceph/rook-ceph/cluster/helmrelease.yaml
+++ b/k8s/apps/rook-ceph/rook-ceph/cluster/helmrelease.yaml
@@ -34,10 +34,10 @@ spec:
     ingress:
       dashboard:
         annotations:
-          external-dns.alpha.kubernetes.io/target: "internal.${SECRET_HOME_DOMAIN}"
+          external-dns.alpha.kubernetes.io/target: "internal.goyangi.cloud"
         ingressClassName: internal
         host:
-          name: "rook.${SECRET_HOME_DOMAIN}"
+          name: "rook.goyangi.cloud"
           path: /
     toolbox:
       enabled: true
