feat: not entirely yeet

--- a/k8s/flux/apps.yaml
+++ b/k8s/flux/apps.yaml
@@ -25,6 +25,11 @@ spec:
             provider: sops
             secretRef:
               name: sops-age
+          postBuild:
+            substituteFrom:
+              - kind: Secret
+                name: cluster-secrets
+                optional: true
       target:
         group: kustomize.toolkit.fluxcd.io
         kind: Kustomization
