--- a/k8s/apps/observability/gatus/app/resources/config.yaml
+++ b/k8s/apps/observability/gatus/app/resources/config.yaml
@@ -38,7 +38,7 @@ endpoints:
       - type: pushover
   - name: flux-webhook
     group: external
-    url: https://flux-webhook.$goyangi.cloud
+    url: https://flux-webhook.goyangi.cloud
     interval: 1m
     client:
       dns-resolver: tcp://1.1.1.1:53
