jank: donut wait for certs

--- a/k8s/apps/network/nginx/ks.yaml
+++ b/k8s/apps/network/nginx/ks.yaml
@@ -30,8 +30,8 @@ spec:
   commonMetadata:
     labels:
       app.kubernetes.io/name: *app
-  dependsOn:
-    - name: nginx-certificates
+  # dependsOn:
+  #   - name: nginx-certificates
   path: ./k8s/apps/network/nginx/internal
   prune: true
   sourceRef:
@@ -51,8 +51,8 @@ spec:
   commonMetadata:
     labels:
       app.kubernetes.io/name: *app
-  dependsOn:
-    - name: nginx-certificates
+  # dependsOn:
+  #   - name: nginx-certificates
   path: ./k8s/apps/network/nginx/external
   prune: true
   sourceRef:
