--- a/k8s/apps/network/nginx/certificates/certificates.yaml
+++ b/k8s/apps/network/nginx/certificates/certificates.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   secretName: goyangi-cloud-tls
   issuerRef:
-    name: letsencrypt-production
+    name: letsencrypt-staging
     kind: ClusterIssuer
   commonName: goyangi.cloud
   dnsNames:
