--- a/k8s/apps/default/kustomization.yaml
+++ b/k8s/apps/default/kustomization.yaml
@@ -11,9 +11,9 @@ resources:
   - ./autobrr/ks.yaml
   - ./radarr/ks.yaml
   - ./sonarr/ks.yaml
-  # - ./lazylibrarian/ks.yaml
-  - ./readarr/ks.yaml
-  - ./readarr-ab/ks.yaml
+  - ./lazylibrarian/ks.yaml
+  # - ./readarr/ks.yaml
+  # - ./readarr-ab/ks.yaml
   - ./deemix/ks.yaml
   - ./flaresolverr/ks.yaml
   - ./slskd/ks.yaml
