jank: change hostname set to get real certificate

--- a/k8s/apps/network/nginx/certificates/certificates.yaml
+++ b/k8s/apps/network/nginx/certificates/certificates.yaml
@@ -15,4 +15,4 @@ spec:
     - solanyn.dev
     - "*.solanyn.dev"
     # TODO: Delete me, temporary workaround for letsencrypt rate limit
-    - example.com
+    - jank.goyangi.cloud
