feat(komga): try subPath after fixing permissions

--- a/k8s/apps/default/komga/app/helmrelease.yaml
+++ b/k8s/apps/default/komga/app/helmrelease.yaml
@@ -77,3 +77,7 @@ spec:
         type: nfs
         server: nas.internal
         path: /mnt/world/media
+        globalMounts:
+          - path: /media/books
+            subPath: books
+            readOnly: true
