fix: yeet secret home domain

--- a/k8s/apps/network/nginx/external/helmrelease.yaml
+++ b/k8s/apps/network/nginx/external/helmrelease.yaml
@@ -68,7 +68,7 @@ spec:
           namespaceSelector:
             any: true
       extraArgs:
-        default-ssl-certificate: "network/${SECRET_HOME_DOMAIN/./-}-tls"
+        default-ssl-certificate: "network/goyangi-cloud-tls"
         publish-status-address: *hostname
       terminationGracePeriodSeconds: 120
       publishService:
