feat: permissions strikes again, add subpath back

--- a/k8s/apps/default/qbittorrent/tools/helmrelease.yaml
+++ b/k8s/apps/default/qbittorrent/tools/helmrelease.yaml
@@ -104,3 +104,8 @@ spec:
         type: nfs
         server: nas.internal
         path: /mnt/world/media
+        advancedMounts:
+          orphaned:
+            app:
+              - path: /media/downloads/torrents
+                subPath: downloads/torrents
