--- a/k8s/apps/default/cross-seed/app/helmrelease.yaml
+++ b/k8s/apps/default/cross-seed/app/helmrelease.yaml
@@ -87,3 +87,6 @@ spec:
         type: nfs
         server: nas.internal
         path: /mnt/world/media
+        globalMounts:
+          - path: /media/downloads
+            subPath: downloads
