--- a/k8s/apps/default/slskd/app/helmrelease.yaml
+++ b/k8s/apps/default/slskd/app/helmrelease.yaml
@@ -118,3 +118,6 @@ spec:
         type: nfs
         server: nas.internal
         path: /mnt/world/media
+        globalMounts:
+          - path: /media/downloads/soulseek
+            subPath: downloads/soulseek
