--- a/k8s/apps/default/stash/ks.yaml
+++ b/k8s/apps/default/stash/ks.yaml
@@ -20,4 +20,5 @@ spec:
   postBuild:
     substitute:
       APP: *app
-      VOLSYNC_CAPACITY: 5Gi
+      VOLSYNC_CAPACITY: 30Gi
+      VOLSYNC_CACHE_CAPACITY: 8Gi
