feat: deploy calibre, calibre-web, readarr, readarr-ab

--- a/k8s/apps/default/calibre-web/app/pvc.yaml
+++ b/k8s/apps/default/calibre-web/app/pvc.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: lazylibrarian-cache
+  name: calibre-web-cache
 spec:
   accessModes: ["ReadWriteOnce"]
   resources:
