--- a/k8s/apps/default/readarr-ab/app/helmrelease.yaml
+++ b/k8s/apps/default/readarr-ab/app/helmrelease.yaml
@@ -2,7 +2,7 @@
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
-  name: readarr
+  name: readarr-ab
 spec:
   interval: 30m
   chart:
@@ -26,7 +26,7 @@ spec:
       namespace: rook-ceph
   values:
     controllers:
-      readarr:
+      readarr-ab:
         annotations:
           reloader.stakater.com/auto: "true"
         initContainers:
@@ -52,7 +52,7 @@ spec:
               tag: 0.4.6.2711@sha256:0a4eaa2b8996a45539fead59159733694aba2d60c1080b23e0b9d894114fbd53
             env:
               # NOTE: Environment variables only work because onedr0p containers do some cool things to turn ENV variables to config.xml
-              READARR__APP__INSTANCENAME: Readarr
+              READARR__APP__INSTANCENAME: Readarr Audiobooks
               READARR__APP__THEME: dark
               READARR__AUTH__METHOD: External
               READARR__AUTH__REQUIRED: DisabledForLocalAddresses
@@ -94,7 +94,7 @@ spec:
         seccompProfile: {type: RuntimeDefault}
     service:
       app:
-        controller: readarr
+        controller: readarr-ab
         ports:
           http:
             port: *port
@@ -112,11 +112,11 @@ spec:
                   port: http
     persistence:
       config:
-        existingClaim: readarr
+        existingClaim: readarr-ab
       # NOTE: While ENV variable config is not available
       config-file:
         type: secret
-        name: readarr-secret
+        name: readarr-ab-secret
         globalMounts:
           - path: /secret/config.xml
             subPath: config.xml
