fix(calibre): args

--- a/k8s/apps/default/calibre/app/helmrelease.yaml
+++ b/k8s/apps/default/calibre/app/helmrelease.yaml
@@ -29,9 +29,7 @@ spec:
       calibre:
         containers:
           app:
-            args:
-              - --port=80
-              - /media/books
+            args: ["--port=80", "--with-library=/media/books", "/config"]
             env:
               HOME: /config
               TZ: Australia/Sydney
