feat: enable write

--- a/k8s/apps/default/calibre/app/helmrelease.yaml
+++ b/k8s/apps/default/calibre/app/helmrelease.yaml
@@ -29,7 +29,7 @@ spec:
       calibre:
         containers:
           app:
-            args: ["--port=80"]
+            args: ["--port=80", "--enable-local-write"]
             env:
               HOME: /config
               TZ: Australia/Sydney
