--- a/k8s/apps/default/readarr-ab/app/pvc.yaml
+++ b/k8s/apps/default/readarr-ab/app/pvc.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: readarr
+  name: readarr-ab
 spec:
-  accessModes: ["ReadWriteMany"]
+  accessModes: ["ReadWriteOnce"]
   resources:
     requests:
-      storage: 15Gi
-  storageClassName: ceph-filesystem
+      storage: 5Gi
+  storageClassName: ceph-block
