--- a/k8s/apps/default/calibre-web/app/helmrelease.yaml
+++ b/k8s/apps/default/calibre-web/app/helmrelease.yaml
@@ -32,6 +32,8 @@ spec:
             image:
               repository: ghcr.io/vaskozl/calibre-web
               tag: 0.6.23@sha256:1077240876b9fefa6e906464d2da81acf8d47c78ca759a3bf952e9efe621e857
+            command: ["/bin/bash", "-c", "--"]
+            args: ["while true; do sleep 30; done;"]
             env:
               CACHE_DIR: /cache
               # CALIBRE_DBPATH: /calibre/metadata.db
