jank: turn off probes too

--- a/k8s/apps/default/calibre-web/app/helmrelease.yaml
+++ b/k8s/apps/default/calibre-web/app/helmrelease.yaml
@@ -37,16 +37,16 @@ spec:
             env:
               CACHE_DIR: /cache
               # CALIBRE_DBPATH: /calibre/metadata.db
-            probes:
-              liveness:
-                enabled: true
-              readiness:
-                enabled: true
-              startup:
-                enabled: true
-                spec:
-                  failureThreshold: 30
-                  periodSeconds: 5
+            # probes:
+            #   liveness:
+            #     enabled: true
+            #   readiness:
+            #     enabled: true
+            #   startup:
+            #     enabled: true
+            #     spec:
+            #       failureThreshold: 30
+            #       periodSeconds: 5
             securityContext:
               allowPrivilegeEscalation: false
               readOnlyRootFilesystem: true
