--- a/k8s/apps/default/calibre-web/app/helmrelease.yaml
+++ b/k8s/apps/default/calibre-web/app/helmrelease.yaml
@@ -34,7 +34,7 @@ spec:
               tag: 0.6.23@sha256:1077240876b9fefa6e906464d2da81acf8d47c78ca759a3bf952e9efe621e857
             env:
               CACHE_DIR: /cache
-              CALIBRE_DBPATH: /media/calibre/metadata.db
+              # CALIBRE_DBPATH: /media/calibre/metadata.db
             probes:
               liveness:
                 enabled: true
