--- a/k8s/apps/default/calibre-web/app/helmrelease.yaml
+++ b/k8s/apps/default/calibre-web/app/helmrelease.yaml
@@ -30,11 +30,8 @@ spec:
         containers:
           app:
             image:
-              repository: ghcr.io/vaskozl/calibre-web
-              tag: 0.6.23@sha256:1077240876b9fefa6e906464d2da81acf8d47c78ca759a3bf952e9efe621e857
-            env:
-              CACHE_DIR: /cache
-              # CALIBRE_DBPATH: /media/calibre/metadata.db
+              repository: ghcr.io/bjw-s-labs/calibre-web
+              tag: 0.6.24@sha256:3adac22931efde3722834b9a12f9e3559944403db28545968949e1360939d64c
             probes:
               liveness:
                 enabled: true
