fix: add mounts back

--- a/k8s/apps/default/calibre-web/app/helmrelease.yaml
+++ b/k8s/apps/default/calibre-web/app/helmrelease.yaml
@@ -89,10 +89,10 @@ spec:
         globalMounts:
           - path: /media/calibre
             subPath: calibre
-            # readOnly: true
+            readOnly: true
       cache:
         existingClaim: calibre-web-cache
-      # calibre:
-      #   existingClaim: calibre
-      #   globalMounts:
-      #     - path: /calibre
+      calibre:
+        existingClaim: calibre
+        globalMounts:
+          - path: /calibre
