--- a/k8s/apps/default/kustomization.yaml
+++ b/k8s/apps/default/kustomization.yaml
@@ -11,10 +11,7 @@ resources:
   - ./autobrr/ks.yaml
   - ./radarr/ks.yaml
   - ./sonarr/ks.yaml
-  - ./calibre/ks.yaml
-  - ./calibre-web/ks.yaml
-  - ./readarr/ks.yaml
-  - ./readarr-ab/ks.yaml
+  - ./lazylibrarian/ks.yaml
   - ./flaresolverr/ks.yaml
   - ./slskd/ks.yaml
   - ./recyclarr/ks.yaml
