--- a/k8s/apps/default/lazylibrarian/app/helmrelease.yaml
+++ b/k8s/apps/default/lazylibrarian/app/helmrelease.yaml
@@ -2,7 +2,7 @@
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
-  name: calibre-web
+  name: &app lazylibrarian
 spec:
   interval: 30m
   chart:
@@ -26,46 +26,55 @@ spec:
       namespace: rook-ceph
   values:
     controllers:
-      calibre-web:
+      lazylibrarian:
+        annotations:
+          reloader.stakater.com/auto: "true"
         containers:
           app:
             image:
-              repository: ghcr.io/bjw-s-labs/calibre-web
-              tag: 0.6.24@sha256:3adac22931efde3722834b9a12f9e3559944403db28545968949e1360939d64c
+              repository: ghcr.io/linuxserver/lazylibrarian
+              tag: version-2e00878f@sha256:ef81640c788ecdac31f6aa4b6ec7d18913ce8573cb6928b749588b8230722a72
             env:
+              PUID: 1000
+              PGID: 1000
               TZ: Australia/Sydney
             probes:
-              liveness:
+              liveness: &probes
                 enabled: true
-              readiness:
-                enabled: true
-              startup:
-                enabled: true
+                custom: true
                 spec:
-                  failureThreshold: 30
-                  periodSeconds: 5
-            securityContext:
-              allowPrivilegeEscalation: false
-              readOnlyRootFilesystem: true
-              capabilities: {drop: ["ALL"]}
+                  httpGet:
+                    path: /
+                    port: &port 5299
+                  initialDelaySeconds: 0
+                  periodSeconds: 10
+                  timeoutSeconds: 1
+                  failureThreshold: 3
+              readiness: *probes
+            # securityContext:
+            #   allowPrivilegeEscalation: false
+            #   readOnlyRootFilesystem: true
+            #   capabilities: {drop: ["ALL"]}
             resources:
               requests:
                 cpu: 10m
               limits:
-                memory: 512Mi
-    defaultPodOptions:
-      securityContext:
-        runAsNonRoot: true
-        runAsUser: 1000
-        runAsGroup: 1000
-        fsGroup: 1000
-        seccompProfile: {type: RuntimeDefault}
+                memory: 2Gi
+    # defaultPodOptions:
+    #   securityContext:
+    #     runAsNonRoot: true
+    #     runAsUser: 1000
+    #     runAsGroup: 1000
+    #     fsGroup: 1000
+    #     fsGroupChangePolicy: OnRootMismatch
+    #     supplementalGroups: [10000]
+    #     seccompProfile: {type: RuntimeDefault}
     service:
       app:
-        controller: calibre-web
+        controller: *app
         ports:
           http:
-            port: 8083
+            port: *port
     ingress:
       app:
         annotations:
@@ -75,26 +84,20 @@ spec:
           - host: "{{ .Release.Name }}.goyangi.cloud"
             paths:
               - path: /
-                pathType: Prefix
                 service:
                   identifier: app
                   port: http
     persistence:
       config:
-        existingClaim: calibre-web
+        existingClaim: lazylibrarian
+      cache:
+        existingClaim: lazylibrarian-cache
+        globalMounts:
+          - path: /config/cache
       tmp:
         type: emptyDir
-      books:
+        sizeLimit: 1Gi
+      media:
         type: nfs
         server: nas.internal
         path: /mnt/world/media
-        globalMounts:
-          - path: /media/calibre
-            subPath: calibre
-            readOnly: true
-      cache:
-        existingClaim: calibre-web-cache
-      calibre:
-        existingClaim: calibre
-        globalMounts:
-          - path: /calibre
