--- a/k8s/apps/default/lazylibrarian/app/pvc.yaml
+++ b/k8s/apps/default/lazylibrarian/app/pvc.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: readarr-ab
+  name: lazylibrarian-cache
 spec:
   accessModes: ["ReadWriteOnce"]
   resources:
     requests:
-      storage: 5Gi
+      storage: 10Gi
   storageClassName: ceph-block
