--- a/k8s/apps/default/lazylibrarian/ks.yaml
+++ b/k8s/apps/default/lazylibrarian/ks.yaml
@@ -1,22 +1,23 @@
-# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/kustomize.toolkit.fluxcd.io/kustomization_v1.json
+# yaml-language-server: $schema=https://raw.githubusercontent.com/fluxcd-community/flux2-schemas/main/kustomization-kustomize-v1.json
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: &app calibre-web
+  name: &app lazylibrarian
   namespace: flux-system
 spec:
   targetNamespace: default
   commonMetadata:
     labels:
       app.kubernetes.io/name: *app
-  path: ./k8s/apps/default/calibre-web/app
+  dependsOn:
+    - name: external-secrets-stores
+  path: ./k8s/apps/default/lazylibrarian/app
   prune: true
   sourceRef:
     kind: GitRepository
     name: homelab
   wait: false
   interval: 30m
-  retryInterval: 1m
   timeout: 5m
   postBuild:
     substitute:
