feat: add calibre docker-mod

--- a/k8s/apps/default/lazylibrarian/app/helmrelease.yaml
+++ b/k8s/apps/default/lazylibrarian/app/helmrelease.yaml
@@ -38,6 +38,7 @@ spec:
               PUID: 1000
               PGID: 1000
               TZ: Australia/Sydney
+              DOCKER_MODS: linuxserver/mods:universal-calibre
             probes:
               liveness: &probes
                 enabled: true
