--- a/k8s/apps/network/kustomization.yaml
+++ b/k8s/apps/network/kustomization.yaml
@@ -3,6 +3,7 @@ kind: Kustomization
 resources:
   - ./namespace.yaml
   - ./cloudflared/ks.yaml
+  - ./tailscale/ks.yaml
   - ./external-dns/ks.yaml
   - ./nginx/ks.yaml
   - ./echo-server/ks.yaml
