--- a/k8s/apps/network/tailscale/app/rbac.yaml
+++ b/k8s/apps/network/tailscale/app/rbac.yaml
@@ -2,13 +2,13 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: operator
-  namespace: networking
+  namespace: network
 ---
 apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: proxies
-  namespace: networking
+  namespace: network
 ---
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
@@ -186,13 +186,13 @@ roleRef:
 subjects:
   - kind: ServiceAccount
     name: operator
-    namespace: networking
+    namespace: network
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
   name: operator
-  namespace: networking
+  namespace: network
 rules:
   - apiGroups:
       - ""
@@ -211,7 +211,7 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
   name: proxies
-  namespace: networking
+  namespace: network
 rules:
   - apiGroups:
       - ""
@@ -224,7 +224,7 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
   name: operator
-  namespace: networking
+  namespace: network
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: Role
@@ -232,13 +232,13 @@ roleRef:
 subjects:
   - kind: ServiceAccount
     name: operator
-    namespace: networking
+    namespace: network
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
   name: proxies
-  namespace: networking
+  namespace: network
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: Role
@@ -246,7 +246,7 @@ roleRef:
 subjects:
   - kind: ServiceAccount
     name: proxies
-    namespace: networking
+    namespace: network
 ---
 apiVersion: networking.k8s.io/v1
 kind: IngressClass
