feat(tailscale): add proxyclass

--- a/k8s/apps/network/tailscale/app/helmrelease.yaml
+++ b/k8s/apps/network/tailscale/app/helmrelease.yaml
@@ -26,3 +26,5 @@ spec:
       hostname: "tailscale-operator"
     apiServerProxyConfig:
       mode: "true"
+    proxyClass:
+      defaultProxyClass: "tun-access"
