--- a/k8s/apps/kube-system/kustomization.yaml
+++ b/k8s/apps/kube-system/kustomization.yaml
@@ -4,6 +4,8 @@ resources:
   - ./namespace.yaml
   - ./cilium/ks.yaml
   - ./coredns/ks.yaml
+  - ./descheduler/ks.yaml
+  - ./generic-device-plugin/ks.yaml
   - ./metrics-server/ks.yaml
   - ./reloader/ks.yaml
   - ./kubelet-csr-approver/ks.yaml
