fix(intel): only enable gpu device

--- a/k8s/apps/kube-system/intel-device-plugin/app/helmrelease.yaml
+++ b/k8s/apps/kube-system/intel-device-plugin/app/helmrelease.yaml
@@ -27,6 +27,8 @@ spec:
     - name: node-feature-discovery
       namespace: kube-system
   values:
+    controllerExtraArgs: |
+      - --devices=gpu
     resources:
       requests:
         cpu: 10m
