--- a/k8s/apps/network/nginx/internal/helmrelease.yaml
+++ b/k8s/apps/network/nginx/internal/helmrelease.yaml
@@ -27,6 +27,7 @@ spec:
         annotations:
           external-dns.alpha.kubernetes.io/hostname: &hostname "internal.goyangi.cloud"
           lbipam.cilium.io/ips: "192.168.68.201"
+          tailscale.com/expose: "true"
         externalTrafficPolicy: Cluster
       ingressClassResource:
         name: internal
