feat(coredns): add records

--- a/k8s/apps/default/filebrowser/app/helmrelease.yaml
+++ b/k8s/apps/default/filebrowser/app/helmrelease.yaml
@@ -89,7 +89,7 @@ spec:
         existingClaim: filebrowser
       data:
         type: nfs
-        server: nas.goyangi.cloud
+        server: nas.internal
         path: /mnt/world
         globalMounts:
           - path: /nfs
