--- a/k8s/apps/kube-system/coredns/app/kustomization.yaml
+++ b/k8s/apps/kube-system/coredns/app/kustomization.yaml
@@ -1,6 +1,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
+  - ./configmap.yaml
   - ./helmrelease.yaml
 configMapGenerator:
   - name: coredns-helm-values
